[project]
name = "ro-utils"
version = "0.4.0"
description = "utils for daily usage"
authors = [{ name = "rogerogers", email = "rogers@rogerogers.com" }]
requires-python = ">=3.10"
readme = "readme.md"

[project.urls]
Homepage = "https://github.com/rogerogers/python-ro-utils"
Repository = "https://github.com/rogerogers/python-ro-utils"
Issues = "https://github.com/rogerogers/python-ro-utils/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "ro_utils" = "src/ro_utils" }
